# M2_H07

./: .gitignore  README.md  alembic.ini  config.ini  config.py  connect_db.py  create_db.py  fill_data.py  generator_data.py  models.py  my_select.py  pyproject.toml  seed.py  study.db  study.sql
Queries/: execute_queries.py  query_eight.sql  query_eleven.sql  query_five.sql  query_four.sql  query_nine.sql  query_one.sql  query_seven.sql  query_six.sql  query_ten.sql  query_three.sql  query_twelve.sql  query_two.sql
alembic/versions/: 220d7caa9fbe_init.py  9a3477afda1d_init.py  a48b175674e4_init.py  ea12c7b29789_init.py  f04e3e7e2b51_init.py  f9c664e23442_init.py
