[tool.poetry]
name = "m2-h07"
version = "0.1.0"
description = ""
authors = ["Dmytro Filin <dmitriy.fillin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.12.0"
sqlalchemy = "^2.0.20"
faker = "^19.3.1"
prettytable = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
